--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,44 @@
-dist/
+dist/*
+attached_assets/*
+node_modules/*
+*.log
+*.tmp
+*.bak
+*.swp
+.DS_Store
+.env
+coverage/
+.vscode/
+.idea/
+*.iml
+*.sublime-workspace
+*.sublime-project
+*.vscode-test
+*.cache
+*.pid
+*.orig
+*.rej
+*.gz
+*.zip
+*.tar
+*.tgz
+*.rar
+*.7z
+*.exe
+*.dll
+*.so
+*.dmg
+*.pkg
+*.deb
+*.rpm
+*.msi
+*.apk
+*.ipa
+*.war
+*.jar
+*.class
+*.o
+*.a
+*.out
+*.obj
+*.pdb       
